Share native calculation limits across API and website
Entire-Checkpoint: 01M482C1268P6M1VE65TEP4P2B
